# binance-data

./: .env  Cargo.toml  data.csv  plot.py  up.sql
src/: main.rs
