[package]
name = "binance-data"
version = "0.1.0"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openlimits = "0.1"
rust_decimal = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "decimal" ] }
dotenv = "0.15"